--- a/common-tomcat-maven-plugin/pom.xml
+++ b/common-tomcat-maven-plugin/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>tomcat-maven-plugin</artifactId>
     <groupId>org.apache.tomcat.maven</groupId>
-    <version>2.3-SNAPSHOT</version>
+    <version>2.3.0-failfast-SNAPSHOT</version>
   </parent>
   <artifactId>common-tomcat-maven-plugin</artifactId>
   <name>Apache Tomcat Maven Plugin :: Common API</name>
