--- a/common-tomcat-maven-plugin/pom.xml
+++ b/common-tomcat-maven-plugin/pom.xml
@@ -24,10 +24,11 @@
   <parent>
     <artifactId>tomcat-maven-plugin</artifactId>
     <groupId>org.apache.tomcat.maven</groupId>
-    <version>2.3.0-failfast-SNAPSHOT</version>
+    <version>2.2</version>
   </parent>
   <artifactId>common-tomcat-maven-plugin</artifactId>
   <name>Apache Tomcat Maven Plugin :: Common API</name>
+  <version>2.3.0-failfast-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
